# agentic-ai

./: .env.example  .gitignore  README.md  pyproject.toml
agentmesh/: __init__.py  registry.py  run_agent.py
agentmesh/a2a/: __init__.py  cards.py  client.py  delegate_tool.py  executor.py  server_factory.py
agentmesh/graphs/: __init__.py  agent_graph_factory.py  checkpoints.py  orchestrator_graph.py
agentmesh/interfaces/: cli.py
agentmesh/interfaces/web/: server.py
agentmesh/interfaces/web/static/: index.html
agentmesh/llm/: __init__.py  models.py
agentmesh/mcp_servers/: __init__.py  filesystem_server.py  memory_server.py  python_exec_server.py  weather_server.py  web_search_server.py
agentmesh/utils/: config_loader.py  cost_tracker.py
config/: agents.yaml  mcp_servers.yaml
scripts/: dry_run_check.sh  start_all.ps1  start_all.sh  stop_all.ps1
tests/: test_a2a_roundtrip.py  test_agent_graph_factory.py  test_cost_guardrails.py  test_mcp_servers.py  test_orchestrator_delegation.py  test_web_server.py
